<resources>
    <string name="app_name">SqlLite</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="so_dien_thoai">So dien thoai</string>
    <string name="update">Update</string>
    <string name="xoa">Xoa</string>
    <string name="ch_n_h_nh">Chọn Hình</string>
    <string name="ch_p_h_nh">Chụp hình</string>
    <string name="h_y">Hủy</string>
    <string name="l_u">Lưu</string>
    <string name="nameupdate">Name</string>
    <string name="so_dien_thoai_2">So dien thoai 2</string>
</resources>
